- Added `is_logged` to templates for fav button. - Modified CSS for `add_recipe.css` and `specific.css` to ensure minimum height covers the viewport.

--- a/app/app/static/css/add_recipe.css
+++ b/app/app/static/css/add_recipe.css
@@ -1,6 +1,6 @@
 html,
 body {
-  height: 100%;
+  min-height: 100vh;
   /* Ensures the background covers the full height */
   margin: 0;
   font-family: Larish Nue;
