--- a/app/app/static/css/specific.css
+++ b/app/app/static/css/specific.css
@@ -68,3 +68,7 @@ ul.content {
 .is-clicked-heart-bg {
   background-color: rgb(241, 186, 186);
 }
+
+body {
+  min-height: 100vh;
+}
